# nexthotel

./: .gitignore  CHECKPOINT.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md  update.json
app/: README.md  build-release.cmd  index.html  install-autostart.cmd  package.json  tailwind.config.js  uninstall-autostart.cmd  vite.config.ts
app/src/: App.tsx  index.css  main.tsx
app/src-tauri/: Cargo.toml
app/src-tauri/core/: Cargo.toml
app/src-tauri/core/src/: lib.rs
app/src-tauri/desktop/: Cargo.toml
app/src-tauri/desktop/src/: assets.rs  auth.rs  db.rs  handlers.rs  lib.rs
app/src-tauri/desktop/src/commands/: audit.rs  backup.rs  expenses.rs  hotel.rs  housekeeping.rs  night_audit.rs  rate_plans.rs  rooms.rs  shifts.rs
app/src-tauri/src/: assets.rs  error.rs  lib.rs  main.rs  models.rs  state.rs  tray.rs
app/src-tauri/src/commands/: charges.rs  guests.rs  mod.rs  payments.rs  reports.rs  reservations.rs  settings.rs  updater.rs
app/src/components/: AppShell.tsx  ConnectionStatus.tsx  MinWindowGuard.tsx  Modal.tsx  RequireRole.tsx  RoomTypeSelect.tsx  ShiftIndicator.tsx  StatusBadge.tsx  UpdateBanner.tsx
app/src/i18n/: index.ts  vi.json
app/src/lib/: api.ts  auth.tsx  date.ts  http.ts  money.ts  types.ts
app/src/pages/: AuditLogSection.tsx  BootstrapWizard.tsx  CalendarPage.tsx  ExpensesPage.tsx  GuestsPage.tsx  HousekeepingPage.tsx  InvoiceView.tsx  LoginPage.tsx  NightAuditSection.tsx  ReportsPage.tsx  ReservationDrawer.tsx  ReservationForm.tsx  SettingsPage.tsx  ShiftsSection.tsx  UsersSection.tsx
docs/: CLOUD-BOOKING-WIDGET-DIRECTIONS.md  CLOUD-DESIGN-DECISIONS.md  CLOUD-DESIGN.md  CLOUD-TEST-PLAN.md  README.md  cheat-sheets.md  director.md  glossary.md  manager.md  staff.md  troubleshooting.md
