[package]
name = "nexthotel-server"
version = "0.1.0"
description = "nextHotel — PMS server for independent Vietnamese hotels"
authors = ["nextHotel"]
edition = "2021"

[[bin]]
name = "nexthotel-server"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "compression-gzip"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Auth
argon2 = "0.5"
rand = "0.8"

# Errors
thiserror = "1"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embed frontend dist into the binary
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# LAN IP discovery
local-ip-address = "0.6"

# Self-updater
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
semver = "1"

# System tray
tray-icon = "0.19"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
