[workspace]
resolver = "2"
members = ["core", "desktop"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["nextHotel"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
