[package]
name = "nexthotel-core"
description = "Pure domain types and logic shared between desktop and cloud nexthotel binaries."
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
