[package]
name = "nexthotel-server"
description = "nextHotel — single-tenant desktop PMS server for Vietnamese hotels."
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "nexthotel-server"
path = "src/main.rs"

[dependencies]
# Shared domain
nexthotel-core = { path = "../core" }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "compression-gzip"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }

# Auth
argon2 = "0.5"
rand = "0.8"

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
chrono = { workspace = true }
directories = "5"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Embed frontend dist into the binary
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"

# LAN IP discovery
local-ip-address = "0.6"

# Self-updater
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
semver = "1"

# System tray
tray-icon = "0.19"
